# mcp-obsidian-ek

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  openapi.yaml  pyproject.toml
.github/workflows/: release.yml
docs/: PRD-smarter-heading-patch.md
src/mcp_obsidian/: __init__.py  obsidian.py  server.py  tools.py
tests/: test_obsidian.py  test_tools.py
