[project]
name = "mcp-obsidian-ek"
version = "0.6.3"
description = "MCP server to interact with Obsidian via the Local REST API plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.24.0",
 "python-dotenv>=1.0.1",
 "requests>=2.32.3",
]

[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[[project.maintainers]]
name = "ernestkoe"
email = "ernestkoe@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/ernestkoe/mcp-obsidian"
Repository = "https://github.com/ernestkoe/mcp-obsidian"
"Original Project" = "https://github.com/MarkusPfundstein/mcp-obsidian"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obsidian"]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-semantic-release>=9.0.0",
    "responses>=0.25.0",
    "ruff>=0.14.10",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"
mcp-obsidian-ek = "mcp_obsidian:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/mcp_obsidian/__init__.py:__version__"]
branch = "main"
commit_parser = "conventional"
allow_zero_version = true  # Allow 0.x versions
major_on_zero = false  # Don't bump to 1.0 on breaking changes while in 0.x

[tool.semantic_release.remote]
type = "github"
name = "origin"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
